force-app/main/default/objects/Opportunity/fields/CommentsVisibleForClient__c.field-meta.xml
<CustomField>
    <fullName>CommentsVisibleForClient__c</fullName>
    <label>Comments (visible for Client)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>