force-app/main/default/objects/Opportunity/fields/CompetitionConstitution__c.field-meta.xml
<CustomField>
    <fullName>CompetitionConstitution__c</fullName>
    <label>構成</label>
    <type>TextArea</type>
</CustomField>