force-app/main/default/objects/Opportunity/fields/CompetitionDetail2__c.field-meta.xml
<CustomField>
    <fullName>CompetitionDetail2__c</fullName>
    <label>詳細</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>