force-app/main/default/objects/Opportunity/fields/CompetitionDetail__c.field-meta.xml
<CustomField>
    <fullName>CompetitionDetail__c</fullName>
    <inlineHelpText>競合メーカーが複数の場合はこちらに入力してください</inlineHelpText>
    <label>備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>