force-app/main/default/objects/Opportunity/fields/CompetitionItemCategory__c.field-meta.xml
<CustomField>
    <fullName>CompetitionItemCategory__c</fullName>
    <label>製品カテゴリー</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FE-SEM</fullName>
            </value>
            <value>
                <fullName>Hi-SEM</fullName>
            </value>
            <value>
                <fullName>卓上SEM</fullName>
            </value>
            <value>
                <fullName>TEM／STEM</fullName>
            </value>
            <value>
                <fullName>FIB/FIB-SEM</fullName>
            </value>
            <value>
                <fullName>イオンミリング</fullName>
            </value>
            <value>
                <fullName>Nano-prober</fullName>
            </value>
            <value>
                <fullName>AeroSurf</fullName>
            </value>
            <value>
                <fullName>SPM</fullName>
            </value>
            <value>
                <fullName>CSI</fullName>
            </value>
            <value>
                <fullName>その他周辺装置</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>