force-app/main/default/objects/Opportunity/fields/CompetitionMaker__c.field-meta.xml
<CustomField>
    <fullName>CompetitionMaker__c</fullName>
    <label>競合メーカー名</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BusinessUnit__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>無競合</fullName>
            </value>
            <value>
                <fullName>HITACHI</fullName>
            </value>
            <value>
                <fullName>JEOL</fullName>
            </value>
            <value>
                <fullName>FEI</fullName>
            </value>
            <value>
                <fullName>Zeiss</fullName>
            </value>
            <value>
                <fullName>SII</fullName>
            </value>
            <value>
                <fullName>KEYENCE</fullName>
            </value>
            <value>
                <fullName>SHIMADZU</fullName>
            </value>
            <value>
                <fullName>TOPCON</fullName>
            </value>
            <value>
                <fullName>ELIONIX</fullName>
            </value>
            <value>
                <fullName>TESCAN</fullName>
            </value>
            <value>
                <fullName>SEC</fullName>
            </value>
            <value>
                <fullName>CAMSCAN</fullName>
            </value>
            <value>
                <fullName>PHENOM</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>複数社</fullName>
            </value>
            <value>
                <fullName>島津</fullName>
            </value>
            <value>
                <fullName>日本分光</fullName>
            </value>
            <value>
                <fullName>ウォーターズ</fullName>
            </value>
            <value>
                <fullName>アジレント</fullName>
            </value>
            <value>
                <fullName>パーキンエルマー</fullName>
            </value>
            <value>
                <fullName>リガク</fullName>
            </value>
            <value>
                <fullName>サーモ</fullName>
            </value>
            <value>
                <fullName>TAI</fullName>
            </value>
            <value>
                <fullName>HORIBA</fullName>
            </value>
            <value>
                <fullName>イエナ</fullName>
            </value>
            <value>
                <fullName>ネッチェ</fullName>
            </value>
            <value>
                <fullName>フィッシャー</fullName>
            </value>
            <value>
                <fullName>ブルカー</fullName>
            </value>
            <value>
                <fullName>CMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>