force-app/main/default/objects/Opportunity/fields/CompetitionMaker_Other__c.field-meta.xml
<CustomField>
    <fullName>CompetitionMaker_Other__c</fullName>
    <label>競合メーカー名 (その他)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>