force-app/main/default/objects/Opportunity/fields/CompetitionModels__c.field-meta.xml
<CustomField>
    <fullName>CompetitionModels__c</fullName>
    <label>型式</label>
    <length>100</length>
    <type>Text</type>
</CustomField>