force-app/main/default/objects/Opportunity/fields/CompetitionPrice__c.field-meta.xml
<CustomField>
    <fullName>CompetitionPrice__c</fullName>
    <label>価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>