force-app/main/default/objects/Opportunity/fields/completionDate__c.field-meta.xml
<CustomField>
    <fullName>completionDate__c</fullName>
    <label>クローズ日</label>
    <type>Date</type>
</CustomField>