force-app/main/default/objects/Opportunity/fields/CostPrice__c.field-meta.xml
<CustomField>
    <fullName>CostPrice__c</fullName>
    <formula>FOB_Price__c + 
OverseasFreightCostsEditable__c + 
BankCharges__c + 
EuCustoms__c + 
HandlingCost__c  +  
LocalAccessories__c  + 
Installation_Warranty__c +  
Reservation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>