force-app/main/default/objects/Opportunity/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>CAS用項目</description>
    <label>顧客略称</label>
    <length>20</length>
    <type>Text</type>
</CustomField>