force-app/main/default/objects/Opportunity/fields/COWO_TemporaryMerge__c.field-meta.xml
<CustomField>
    <fullName>COWO_TemporaryMerge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>仮マージ</label>
    <type>Checkbox</type>
</CustomField>