force-app/main/default/objects/Opportunity/fields/Currency360__c.field-meta.xml
<CustomField>
    <fullName>Currency360__c</fullName>
    <description>Currency name in the format required by the 360 forms</description>
    <formula>CASE(CurrencyIsoCode,
  &apos;EUR&apos;, &apos;Euro&apos;,
  &apos;JPY&apos;, &apos;Japanese Yen&apos;,
  &apos;GBP&apos;, &apos;British Pound&apos;,
  &apos;USD&apos;, &apos;United States Dollar&apos;,
  &apos;SEK&apos;, &apos;Swedish Kroner&apos;,
  &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency (360)</label>
    <type>Text</type>
</CustomField>