force-app/main/default/objects/Opportunity/fields/Customer_purchase_order_date__c.field-meta.xml
<CustomField>
    <fullName>Customer_purchase_order_date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>得意先発注日</label>
    <type>Date</type>
</CustomField>