force-app/main/default/objects/Opportunity/fields/Customer_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requirements__c</fullName>
    <inlineHelpText>Customer Requirements. If this is an opportunity that is converted from a Lead, then this information comes from the Lead.</inlineHelpText>
    <label>Customer Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>