force-app/main/default/objects/Opportunity/fields/CustomerOrderNo__c.field-meta.xml
<CustomField>
    <fullName>CustomerOrderNo__c</fullName>
    <label>得意先発注番号（SAP連携用）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>