force-app/main/default/objects/Opportunity/fields/CustomerSeishikiName__c.field-meta.xml
<CustomField>
    <fullName>CustomerSeishikiName__c</fullName>
    <label>顧客正式名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>