force-app/main/default/objects/Opportunity/fields/DairiBiko__c.field-meta.xml
<CustomField>
    <fullName>DairiBiko__c</fullName>
    <inlineHelpText>引合連絡票のその他特記事項を反映しています。</inlineHelpText>
    <label>その他特記事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>