force-app/main/default/objects/Opportunity/fields/DateOfAddingMainProduct__c.field-meta.xml
<CustomField>
    <fullName>DateOfAddingMainProduct__c</fullName>
    <label>Date Of Adding Main Product</label>
    <type>Date</type>
</CustomField>