force-app/main/default/objects/Opportunity/fields/DBtorikomibi__c.field-meta.xml
<CustomField>
    <fullName>DBtorikomibi__c</fullName>
    <label>DB取込日</label>
    <type>Date</type>
</CustomField>