force-app/main/default/objects/Opportunity/fields/Decision_Maker_Known__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Known__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Several people in the decision making group have been identified. Add this information to the Contact Roles</inlineHelpText>
    <label>Decision Makers Known</label>
    <type>Checkbox</type>
</CustomField>