force-app/main/default/objects/Opportunity/fields/DeliveredItem__c.field-meta.xml
<CustomField>
    <fullName>DeliveredItem__c</fullName>
    <label>既納品</label>
    <type>TextArea</type>
</CustomField>