force-app/main/default/objects/Opportunity/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <inlineHelpText>If you leave the field empty, system will automatically add Delivery Terms copying from Account level.</inlineHelpText>
    <label>Delivery Terms</label>
    <type>TextArea</type>
</CustomField>