force-app/main/default/objects/Opportunity/fields/Delivery_Advised__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Advised__c</fullName>
    <label>Delivery Advised</label>
    <type>Date</type>
</CustomField>