force-app/main/default/objects/Opportunity/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>納期</label>
    <length>255</length>
    <type>Text</type>
</CustomField>