force-app/main/default/objects/Opportunity/fields/DeliveryDevice_ref__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDevice_ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CAS用項目</description>
    <label>納入装置</label>
    <referenceTo>DeliveryDevice__c</referenceTo>
    <relationshipLabel>商談</relationshipLabel>
    <relationshipName>R00N10000000HM5WEAW</relationshipName>
    <type>Lookup</type>
</CustomField>