force-app/main/default/objects/Opportunity/fields/DeliveryLocation_daigaku_kankoucho__c.field-meta.xml
<CustomField>
    <fullName>DeliveryLocation_daigaku_kankoucho__c</fullName>
    <description>カスタム設定取得用</description>
    <label>大学官公庁_職制</label>
    <length>255</length>
    <type>Text</type>
</CustomField>