force-app/main/default/objects/Opportunity/fields/DelOppLFlg__c.field-meta.xml
<CustomField>
    <fullName>DelOppLFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <description>商談商品のトリガで付与</description>
    <label>商談商品一括編集画面判定フラグ</label>
    <type>Checkbox</type>
</CustomField>