force-app/main/default/objects/Opportunity/fields/Demander__c.field-meta.xml
<CustomField>
    <fullName>Demander__c</fullName>
    <label>需要先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>