force-app/main/default/objects/Opportunity/fields/Demo_Completed__c.field-meta.xml
<CustomField>
    <fullName>Demo_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Demonstration for system selection completed.</inlineHelpText>
    <label>Final Demo</label>
    <type>Checkbox</type>
</CustomField>