force-app/main/default/objects/Opportunity/fields/Demo_unit_sale__c.field-meta.xml
<CustomField>
    <fullName>Demo_unit_sale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will the order be executed by supplying an existing demo unit ?</description>
    <inlineHelpText>Will we ship a demo unit to this customer ?</inlineHelpText>
    <label>Demo unit sale</label>
    <type>Checkbox</type>
</CustomField>