force-app/main/default/objects/Opportunity/fields/Demonstration__c.field-meta.xml
<CustomField>
    <fullName>Demonstration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>デモ実施</label>
    <type>Checkbox</type>
</CustomField>