force-app/main/default/objects/Opportunity/fields/Design_Department__c.field-meta.xml
<CustomField>
    <fullName>Design_Department__c</fullName>
    <label>設計部門</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BusinessUnit__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>社設</fullName>
            </value>
            <value>
                <fullName>産１設</fullName>
                <label>産シ設</label>
            </value>
            <value>
                <fullName>産２設</fullName>
                <label>産ソ開</label>
            </value>
            <value>
                <fullName>産業サ</fullName>
            </value>
            <value>
                <fullName>商事</fullName>
            </value>
            <value>
                <fullName>解析</fullName>
            </value>
            <value>
                <fullName>医用</fullName>
            </value>
            <value>
                <fullName>HHS</fullName>
            </value>
            <value>
                <fullName>HSL</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
                <label>デフォルト</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>