force-app/main/default/objects/Opportunity/fields/DeviceType__c.field-meta.xml
<CustomField>
    <fullName>DeviceType__c</fullName>
    <label>装置名</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>