force-app/main/default/objects/Opportunity/fields/disappearanceReason__c.field-meta.xml
<CustomField>
    <fullName>disappearanceReason__c</fullName>
    <label>商談消滅理由</label>
    <type>TextArea</type>
</CustomField>