force-app/main/default/objects/Opportunity/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <formula>IF (EstimatedAmount__c &gt; 0, Amount  -  EstimatedAmount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>値引き額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>