force-app/main/default/objects/Opportunity/fields/DiscountRate__c.field-meta.xml
<CustomField>
    <fullName>DiscountRate__c</fullName>
    <formula>If (Amount == 0, 0, DiscountAmount__c / Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>値引き率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>