force-app/main/default/objects/Opportunity/fields/Distributor_Agent__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor/Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunitys</relationshipLabel>
    <relationshipName>Opportunitys</relationshipName>
    <type>Lookup</type>
</CustomField>