force-app/main/default/objects/Opportunity/fields/Distributor_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Salesperson</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunitys1</relationshipLabel>
    <relationshipName>Opportunitys1</relationshipName>
    <type>Lookup</type>
</CustomField>