force-app/main/default/objects/Opportunity/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>Owner.Department</formula>
    <label>担当者部署</label>
    <type>Text</type>
</CustomField>