force-app/main/default/objects/Opportunity/fields/DocumetCreateOnly__c.field-meta.xml
<CustomField>
    <fullName>DocumetCreateOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>資料作製のみ</label>
    <type>Checkbox</type>
</CustomField>