force-app/main/default/objects/Opportunity/fields/DRTantouForMail__c.field-meta.xml
<CustomField>
    <fullName>DRTantouForMail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店担当者(メール用)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NRLs</relationshipName>
    <type>Lookup</type>
</CustomField>