force-app/main/default/objects/Opportunity/fields/DummyOpportunity__c.field-meta.xml
<CustomField>
    <fullName>DummyOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ダミー商談</label>
    <type>Checkbox</type>
</CustomField>