force-app/main/default/objects/Opportunity/fields/EDS_System__c.field-meta.xml
<CustomField>
    <fullName>EDS_System__c</fullName>
    <description>We need to plan for which EDS system they might order, specially for TM and FlexSEM</description>
    <inlineHelpText>Which EDS system will they probably select ?</inlineHelpText>
    <label>EDS System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AZtec One (TM)</fullName>
            </value>
            <value>
                <fullName>AZtec One Go (TM)</fullName>
            </value>
            <value>
                <fullName>AZtec One (Flex)</fullName>
            </value>
            <value>
                <fullName>AZtec One Go (Flex)</fullName>
            </value>
            <value>
                <fullName>AZtec Std</fullName>
            </value>
            <value>
                <fullName>AZtec Adv</fullName>
            </value>
            <value>
                <fullName>AZtec Auto</fullName>
            </value>
            <value>
                <fullName>AZtec One Go</fullName>
            </value>
            <value>
                <fullName>AZtec One</fullName>
            </value>
            <value>
                <fullName>Q75</fullName>
            </value>
            <value>
                <fullName>Q80</fullName>
            </value>
            <value>
                <fullName>Quantax 200</fullName>
            </value>
            <value>
                <fullName>Quantax 400</fullName>
            </value>
            <value>
                <fullName>Quantax 800</fullName>
            </value>
            <value>
                <fullName>EDAX</fullName>
            </value>
            <value>
                <fullName>Thermo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>