force-app/main/default/objects/Opportunity/fields/EigyoSite__c.field-meta.xml
<CustomField>
    <fullName>EigyoSite__c</fullName>
    <label>営業部門</label>
    <length>255</length>
    <type>Text</type>
</CustomField>