force-app/main/default/objects/Opportunity/fields/Email_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_Contact__c</fullName>
    <description>商談に紐づいている取引先責任者のメールアドレスを自動セット</description>
    <formula>Contact__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>