force-app/main/default/objects/Opportunity/fields/Estimated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery_Date__c</fullName>
    <formula>CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The estimated delivery date = Order Date + Days to Delivery. Used for reports and forecasting</inlineHelpText>
    <label>Estimated Delivery Date</label>
    <type>Date</type>
</CustomField>