force-app/main/default/objects/Opportunity/fields/EuCustoms__c.field-meta.xml
<CustomField>
    <fullName>EuCustoms__c</fullName>
    <formula>IF( ISBLANK(Distributor_Agent__c) , EUCustomsRateEditable__c  * FOBPriceJapan__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EU Customs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>