force-app/main/default/objects/Opportunity/fields/EuCustomsRate__c.field-meta.xml
<CustomField>
    <fullName>EuCustomsRate__c</fullName>
    <label>EU Customs Rate</label>
    <summarizedField>OpportunityLineItem.EuCustomsRate__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Option__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.JapanPurchase__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>