force-app/main/default/objects/Opportunity/fields/EUCustomsRateEditable__c.field-meta.xml
<CustomField>
    <fullName>EUCustomsRateEditable__c</fullName>
    <inlineHelpText>System will copying the maximum value given on Opportunity Product level (EU Customs Rate (%) field). Editable.</inlineHelpText>
    <label>EU Customs Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>