force-app/main/default/objects/Opportunity/fields/ExistPricebook2__c.field-meta.xml
<CustomField>
    <fullName>ExistPricebook2__c</fullName>
    <description>価格表設定済みか確認用を行う。
※カスタムボタンからPricebook2Idが参照できなかったため数式として設定。</description>
    <formula>IF (Pricebook2.Id !=&apos;&apos;, true, false)</formula>
    <label>価格表設定済み</label>
    <type>Checkbox</type>
</CustomField>