force-app/main/default/objects/Opportunity/fields/Expected_Funding_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Funding_date__c</fullName>
    <inlineHelpText>The date when funding (if applicable) is expected.</inlineHelpText>
    <label>Expected Funding date</label>
    <type>Date</type>
</CustomField>