force-app/main/default/objects/Opportunity/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <label>有効期限</label>
    <length>255</length>
    <type>Text</type>
</CustomField>