force-app/main/default/objects/Opportunity/fields/ExternalNo__c.field-meta.xml
<CustomField>
    <fullName>ExternalNo__c</fullName>
    <label>外部番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>