force-app/main/default/objects/Opportunity/fields/Feeling__c.field-meta.xml
<CustomField>
    <fullName>Feeling__c</fullName>
    <label>Feeling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decided</fullName>
            </value>
            <value>
                <fullName>Winning</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Losing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>