force-app/main/default/objects/Opportunity/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <description>CAS用項目</description>
    <label>導入形態</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>購入</fullName>
            </value>
            <value>
                <fullName>試薬リース</fullName>
            </value>
            <value>
                <fullName>ＦＭＳ</fullName>
            </value>
            <value>
                <fullName>ブランチ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>