force-app/main/default/objects/Opportunity/fields/Field3__c.field-meta.xml
<CustomField>
    <fullName>Field3__c</fullName>
    <description>CAS用項目</description>
    <label>競合機種</label>
    <type>TextArea</type>
</CustomField>