force-app/main/default/objects/Opportunity/fields/Field4__c.field-meta.xml
<CustomField>
    <fullName>Field4__c</fullName>
    <description>CAS用項目</description>
    <label>売上予定日</label>
    <type>Date</type>
</CustomField>