force-app/main/default/objects/Opportunity/fields/FinalAmount__c.field-meta.xml
<CustomField>
    <fullName>FinalAmount__c</fullName>
    <label>Final Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>