force-app/main/default/objects/Opportunity/fields/First_Time_EM__c.field-meta.xml
<CustomField>
    <fullName>First_Time_EM__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this is the first time the customer is buying equipment.</inlineHelpText>
    <label>First Time Buyer</label>
    <type>Checkbox</type>
</CustomField>