force-app/main/default/objects/Opportunity/fields/First_Time_Hitachi__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Hitachi__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this will be the first time the customer is buying EM equipment from Hitachi.</inlineHelpText>
    <label>First Time Hitachi</label>
    <type>Checkbox</type>
</CustomField>