force-app/main/default/objects/Opportunity/fields/FOB_Price__c.field-meta.xml
<CustomField>
    <fullName>FOB_Price__c</fullName>
    <description>Total FOB price, all products</description>
    <inlineHelpText>Total FOB price, all products</inlineHelpText>
    <label>FOB Price</label>
    <summarizedField>OpportunityLineItem.CostUnitPrice__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.ProductType__c</field>
        <operation>notEqual</operation>
        <value>Option</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>