force-app/main/default/objects/Opportunity/fields/FOBPriceJapan__c.field-meta.xml
<CustomField>
    <fullName>FOBPriceJapan__c</fullName>
    <label>FOB Price Japan</label>
    <summarizedField>OpportunityLineItem.CostTotalPrice__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.JapanPurchase__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>