force-app/main/default/objects/Opportunity/fields/ForecastStatus__c.field-meta.xml
<CustomField>
    <fullName>ForecastStatus__c</fullName>
    <label>Forecast status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sure</fullName>
            </value>
            <value>
                <fullName>Good Chance</fullName>
            </value>
            <value>
                <fullName>Difficult</fullName>
            </value>
            <value>
                <fullName>Impossible</fullName>
            </value>
            <value>
                <fullName>Open competition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>