force-app/main/default/objects/Opportunity/fields/FunazumiYoteiDate__c.field-meta.xml
<CustomField>
    <fullName>FunazumiYoteiDate__c</fullName>
    <label>船積予定日</label>
    <type>Date</type>
</CustomField>