force-app/main/default/objects/Opportunity/fields/gaichuhi__c.field-meta.xml
<CustomField>
    <fullName>gaichuhi__c</fullName>
    <defaultValue>0</defaultValue>
    <label>外注費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>