force-app/main/default/objects/Opportunity/fields/GeneralConditionLanguage__c.field-meta.xml
<CustomField>
    <fullName>GeneralConditionLanguage__c</fullName>
    <label>General Condition Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>