force-app/main/default/objects/Opportunity/fields/GeneralTermAndCondition__c.field-meta.xml
<CustomField>
    <fullName>GeneralTermAndCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Term and Condition</label>
    <referenceTo>GeneralTermsAndConditions__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>