force-app/main/default/objects/Opportunity/fields/GeneralTermsAndConditions__c.field-meta.xml
<CustomField>
    <fullName>GeneralTermsAndConditions__c</fullName>
    <label>General Terms and Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>GeneralConditionLanguage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALLGEMEINE GESCHÄFTSBEDINGUNGEN (AGB)</fullName>
            </value>
            <value>
                <fullName>CONDITIONS GÉNÉRALES (CG)</fullName>
            </value>
            <value>
                <fullName>GENERAL TERMS AND CONDITIONS (GT&amp;C)</fullName>
            </value>
            <value>
                <fullName>GENERAL TERMS AND CONDITIONS FOR PURCHASE</fullName>
                <default>true</default>
                <label>GENERAL TERMS AND CONDITIONS FOR PURCHASE</label>
            </value>
            <value>
                <fullName>CONDITIONS GÉNÉRALES D&apos;ACHAT</fullName>
            </value>
            <value>
                <fullName>ALLGEMEINE LIEFERBEDINGUNGEN</fullName>
            </value>
            <value>
                <fullName>DISTRIBUTOR</fullName>
            </value>
            <value>
                <fullName>Nordic GTC</fullName>
            </value>
            <value>
                <fullName>UK GTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>