force-app/main/default/objects/Opportunity/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <label>商談グループ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>