force-app/main/default/objects/Opportunity/fields/GroupName_HSL__c.field-meta.xml
<CustomField>
    <fullName>GroupName_HSL__c</fullName>
    <label>グループ名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.藤岡G</fullName>
            </value>
            <value>
                <fullName>2.山下G</fullName>
            </value>
            <value>
                <fullName>3.関西</fullName>
            </value>
            <value>
                <fullName>1.原田G</fullName>
                <isActive>false</isActive>
                <label>1.原田G</label>
            </value>
            <value>
                <fullName>2.手塚G</fullName>
                <isActive>false</isActive>
                <label>2.手塚G</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>