force-app/main/default/objects/Opportunity/fields/HandlingCost__c.field-meta.xml
<CustomField>
    <fullName>HandlingCost__c</fullName>
    <inlineHelpText>Handling cost, local transport</inlineHelpText>
    <label>Local Transport</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>